--- a/hello.html
+++ b/hello.html
@@ -10,13 +10,7 @@
 
 <body>
     <h1>Welocme to my website</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ad deserunt beatae distinctio at? Possimus
-    aliquam facilis doloribus aliquid necessitatibus dolor dignissimos modi in id, voluptates provident cupiditate
-    repudiandae eaque nemo reiciendis tempora accusantium quidem impedit libero corrupti vel deleniti perspiciatis
-    commodi et! Repellendus omnis sequi maxime excepturi laudantium cum voluptatibus laboriosam ratione voluptate
-    laborum earum, veritatis vero? Magni at culpa, ipsam enim provident optio doloribus et voluptatum tenetur reiciendis
-    vel accusantium ab, ipsa tempore voluptatem reprehenderit alias molestias laboriosam accusamus iusto esse ad quae!
-    Ut, fuga quas alias, voluptatum culpa incidunt vel odit iure corporis illo unde. Ipsa, ipsam.
+    <p>Changes have been made</p>
     Hello world
 </body>
 
