--- a/hello.html
+++ b/hello.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body{
+            color: aqua;
+            background-color: red;
+        }
+    </style>
     <title>Hello</title>
 </head>
 
 <body>
-    <h1>Welocme to my website!!!</h1>
+    <h1 style="color:blue;">Welocme to my website</h1>
     <p>Changes have been made</p>
     Hello world
 </body>
