--- a/hello.html
+++ b/hello.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <h1 style="color:blue;">Welocme to my website</h1>
-    <p>Changes have been made</p>
-    Hello world
+    Nothing
 </body>
 
 </html>
