--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body{
+        body {
             color: aqua;
             background-color: red;
         }
@@ -18,6 +18,7 @@
     <h1 style="color:blue;">Welocme to my website</h1>
     <p>Changes have been made</p>
     Hello world
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, aliquam!</p>
 </body>
 
 </html>
